# static-disposable-lists

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  disposable-mail-hosts.json  generator-email-hosts.txt  mail-data-hosts-net.txt  mailservices.json  manual.txt  pyproject.toml
.github/workflows/: pages.yml  test-integrity.yml
docs/: index.html
schemas/: disposable-mail-hosts.schema.json  mailservices.schema.json
scripts/: check-mx.py  editor.py  mailservice-editor.py  sort_json_keys.py  validate_hostnames.py  verify_data.py  verify_mailservices.py
