[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "static-disposable-lists"
version = "0.1.0"
description = "Static lists of disposable email domains and mail services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "check-jsonschema>=0.37.1",
    "dnspython",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
